temp fix for roboflow dependency collision

--- a/yolov5-custom-training.ipynb
+++ b/yolov5-custom-training.ipynb
@@ -54,13 +54,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kTvDNSILZoN9",
-        "outputId": "8cb13753-9aa2-45ab-9881-b95169b25e56"
+        "outputId": "bba69fdb-d2ca-4dc4-d5b9-847c176f7612"
       },
       "source": [
         "#clone YOLOv5 and \n",
         "!git clone https://github.com/ultralytics/yolov5  # clone repo\n",
         "%cd yolov5\n",
-        "%pip install -qr requirements.txt roboflow  # install dependencies\n",
+        "%pip install -qr requirements.txt # install dependencies\n",
+        "%pip install -q roboflow\n",
         "\n",
         "import torch\n",
         "import os\n",
@@ -68,23 +69,33 @@
         "\n",
         "print(f\"Setup complete. Using torch {torch.__version__} ({torch.cuda.get_device_properties(0).name if torch.cuda.is_available() else 'CPU'})\")"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Cloning into 'yolov5'...\n",
-            "remote: Enumerating objects: 9279, done.\u001b[K\n",
-            "remote: Counting objects: 100% (30/30), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (29/29), done.\u001b[K\n",
-            "remote: Total 9279 (delta 10), reused 4 (delta 1), pack-reused 9249\u001b[K\n",
-            "Receiving objects: 100% (9279/9279), 9.88 MiB | 20.16 MiB/s, done.\n",
-            "Resolving deltas: 100% (6428/6428), done.\n",
+            "remote: Enumerating objects: 9463, done.\u001b[K\n",
+            "remote: Counting objects: 100% (27/27), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (12/12), done.\u001b[K\n",
+            "remote: Total 9463 (delta 15), reused 25 (delta 15), pack-reused 9436\u001b[K\n",
+            "Receiving objects: 100% (9463/9463), 9.88 MiB | 22.44 MiB/s, done.\n",
+            "Resolving deltas: 100% (6574/6574), done.\n",
             "/content/yolov5\n",
-            "\u001b[K     |████████████████████████████████| 636 kB 13.6 MB/s \n",
-            "\u001b[K     |████████████████████████████████| 1.1 MB 46.1 MB/s \n",
-            "\u001b[?25hSetup complete. Using torch 1.9.0+cu102 (Tesla K80)\n"
+            "\u001b[K     |████████████████████████████████| 636 kB 15.3 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 178 kB 74.8 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 1.1 MB 40.5 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 49.9 MB 26 kB/s \n",
+            "\u001b[K     |████████████████████████████████| 61 kB 8.9 MB/s \n",
+            "\u001b[K     |████████████████████████████████| 138 kB 79.1 MB/s \n",
+            "\u001b[?25h  Building wheel for roboflow (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Building wheel for wget (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "google-colab 1.0.0 requires requests~=2.23.0, but you have requests 2.25.1 which is incompatible.\n",
+            "datascience 0.10.6 requires folium==0.2.1, but you have folium 0.8.3 which is incompatible.\n",
+            "albumentations 0.1.12 requires imgaug<0.2.7,>=0.2.5, but you have imgaug 0.2.9 which is incompatible.\u001b[0m\n",
+            "Setup complete. Using torch 1.9.0+cu102 (Tesla P100-PCIE-16GB)\n"
           ]
         }
       ]
@@ -128,13 +139,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "R2wGvjd4Z_92",
-        "outputId": "7f0e527e-19ce-47b5-83cf-b94edf5e4ffb"
+        "outputId": "9b100d09-654e-4c01-e77d-71d3ec4264c0"
       },
       "source": [
         "from roboflow import Roboflow\n",
         "rf = Roboflow(notebook=\"ultralytics\")"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
