specify model format

--- a/yolov5-custom-training.ipynb
+++ b/yolov5-custom-training.ipynb
@@ -69,7 +69,7 @@
         "\n",
         "print(f\"Setup complete. Using torch {torch.__version__} ({torch.cuda.get_device_properties(0).name if torch.cuda.is_available() else 'CPU'})\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,9 +143,9 @@
       },
       "source": [
         "from roboflow import Roboflow\n",
-        "rf = Roboflow(notebook=\"ultralytics\")"
+        "rf = Roboflow(model_format=\"yolov5\", notebook=\"ultralytics\")"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
